Prefer static imports for Cell enum constants and Clue.clueOf
Replaces qualified Cell.FILLED/EMPTY/NO_VALUE with static-imported
FILLED/EMPTY/NO_VALUE across the codebase, matching the style already
used in LineFeasibility/LineForcedCellSolver. Applies even inside the
model package itself, since being in the same package as Cell doesn't
grant unqualified access to its enum constants - that requires a
static import regardless of package.

Documents the convention in CLAUDE.md, generalized to static imports
for unqualified constants/factories in general (also covers the
Clue.of -> Clue.clueOf rename already in use in tests).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>