@@ -3,10 +3,12 @@ package ru.megadevelopers.nanogram.solver.v4;
 import org.junit.jupiter.api.Test;
 import ru.megadevelopers.nanogram.model.Block;
 import ru.megadevelopers.nanogram.model.Cell;
+import static ru.megadevelopers.nanogram.model.Cell.*;
 import ru.megadevelopers.nanogram.model.Clue;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static ru.megadevelopers.nanogram.model.Clue.clueOf;
 
 class LineFeasibilityTest {
 
@@ -14,7 +16,7 @@ class LineFeasibilityTest {
     void wholeLineIsFeasibleWhenBlocksFitWithSlack() {
         Board board = new Board(1, 5);
 
-        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), Clue.of(1, 2).blocks());
+        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), clueOf(1, 2).blocks());
 
         assertTrue(feasibility.isFullyFeasible());
     }
@@ -23,7 +25,7 @@ class LineFeasibilityTest {
     void wholeLineIsInfeasibleWhenABlockCannotFit() {
         Board board = new Board(1, 1);
 
-        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), Clue.of(2).blocks());
+        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), clueOf(2).blocks());
 
         assertFalse(feasibility.isFullyFeasible());
     }
@@ -31,9 +33,9 @@ class LineFeasibilityTest {
     @Test
     void singleBlockWithNoSlackOnlyFitsAtOnePosition() {
         Board board = new Board(1, 3);
-        Block block = Clue.of(3).blocks().get(0);
+        Block block = clueOf(3).blocks().getFirst();
 
-        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), Clue.of(3).blocks());
+        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), clueOf(3).blocks());
 
         assertTrue(feasibility.isFeasibleAt(block, 0));
     }
@@ -42,7 +44,7 @@ class LineFeasibilityTest {
     void twoBlocksWithNoSlackEachHaveExactlyOneFeasibleStart() {
         // length 4, clue [1,2]: zero slack, unique solution [F,E,F,F]
         Board board = new Board(1, 4);
-        var blocks = Clue.of(1, 2).blocks();
+        var blocks = clueOf(1, 2).blocks();
         Block block0 = blocks.get(0);
         Block block1 = blocks.get(1);
 
@@ -65,7 +67,7 @@ class LineFeasibilityTest {
         // length 5, clue [1,2]: one slack cell, three valid full arrangements
         // (only position 3 ends up forced - see LineForcedCellSolverTest)
         Board board = new Board(1, 5);
-        var blocks = Clue.of(1, 2).blocks();
+        var blocks = clueOf(1, 2).blocks();
         Block block0 = blocks.get(0);
         Block block1 = blocks.get(1);
 
@@ -87,10 +89,10 @@ class LineFeasibilityTest {
     @Test
     void aKnownFilledCellRestrictsPlacementToPositionsThatCoverIt() {
         Board board = new Board(1, 3);
-        board.set(0, 0, Cell.FILLED);
-        Block block = Clue.of(1).blocks().get(0);
+        board.set(0, 0, FILLED);
+        Block block = clueOf(1).blocks().get(0);
 
-        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), Clue.of(1).blocks());
+        LineFeasibility feasibility = LineFeasibility.analyze(board.row(0), clueOf(1).blocks());
 
         assertTrue(feasibility.isFeasibleAt(block, 0));
         assertFalse(feasibility.isFeasibleAt(block, 1));
